refactor: 使用 getFirst 优化首元素访问